Bug 91839 - [WK2] WebIntents doesn't build if mutation observers is disabled
Summary: [WK2] WebIntents doesn't build if mutation observers is disabled
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: WebKit2 (show other bugs)
Version: 528+ (Nightly build)
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Thiago Marcos P. Santos
URL:
Keywords:
Depends on:
Blocks: 91836
  Show dependency treegraph
 
Reported: 2012-07-20 02:09 PDT by Thiago Marcos P. Santos
Modified: 2012-07-20 07:05 PDT (History)
3 users (show)

See Also:


Attachments
Patch (2.06 KB, patch)
2012-07-20 03:32 PDT, Thiago Marcos P. Santos
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Thiago Marcos P. Santos 2012-07-20 02:09:29 PDT
It depends on a code protected by ENABLE(MUTATION_OBSERVERS).
Comment 1 Thiago Marcos P. Santos 2012-07-20 03:32:02 PDT
Created attachment 153467 [details]
Patch
Comment 2 WebKit Review Bot 2012-07-20 07:05:23 PDT
Comment on attachment 153467 [details]
Patch

Clearing flags on attachment: 153467

Committed r123212: <http://trac.webkit.org/changeset/123212>
Comment 3 WebKit Review Bot 2012-07-20 07:05:27 PDT
All reviewed patches have been landed.  Closing bug.