[WK2] WebIntents doesn't build if mutation observers is disabled https://bugs.webkit.org/show_bug.cgi?id=91839

Patch by Thiago Marcos P. Santos <thiago.santos@intel.com> on 2012-07-20
Reviewed by Kenneth Rohde Christiansen.

WebIntents was depending on a code protected by ENABLE(MUTATION_OBSERVERS).
Now the code is also enabled by ENABLE(WEB_INTENTS).

* bindings/js/JSDictionary.cpp:
(WebCore):
* bindings/js/JSDictionary.h:

Canonical link: https://commits.webkit.org/109670@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@123212 268f45cc-cd09-0410-ab3c-d52691b4dbfc